--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,16 +38,16 @@ dependencies:
   google_fonts: ^6.2.1
   webview_flutter: ^4.8.0
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
 
-flutter_icons:
-  ios: true
+flutter_launcher_icons:
   android: true
+  ios: true
   image_path: "assets/Icon.jpeg"
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -67,9 +67,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/Icon.jpeg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
